# LCMware

./: .gitignore  CLAUDE.md  README.md
builtin_types/: core.lcm  examples.lcm
cpp/: CMakeLists.txt  lcmware-config.cmake.in
cpp/examples/: CMakeLists.txt  action_demo.cpp  service_demo.cpp  topic_demo.cpp
cpp/lcmware/: action.hpp  constants.hpp  manager.hpp  service.hpp  topic.hpp
cpp/lcmware/types/core/: ActionCancel.hpp  ActionStatus.hpp  Bool.hpp  BoolArray.hpp  BoolArrayMsg.hpp  BoolMsg.hpp  BoolRequest.hpp  BoolResponse.hpp  BoolServiceRequest.hpp  BoolServiceResponse.hpp  ByteArray.hpp  ByteArrayMsg.hpp  ByteArrayRequest.hpp  ByteArrayResponse.hpp  ByteArrayServiceRequest.hpp  ByteArrayServiceResponse.hpp  Command.hpp  CommandMsg.hpp  CommandResponse.hpp  Double.hpp  DoubleArray.hpp  DoubleArrayMsg.hpp  DoubleMsg.hpp  DoubleRequest.hpp  DoubleResponse.hpp  DoubleServiceRequest.hpp  DoubleServiceResponse.hpp  Empty.hpp  EmptyActionFeedback.hpp  EmptyActionGoal.hpp  EmptyActionResult.hpp  EmptyMsg.hpp  EmptyRequest.hpp  EmptyResponse.hpp  EmptyServiceRequest.hpp  EmptyServiceResponse.hpp  FileRequest.hpp  FileResponse.hpp  Header.hpp  Heartbeat.hpp  (+38 more)
cpp/lcmware/types/examples/: AddNumbersRequest.hpp  AddNumbersResponse.hpp  FollowJointTrajectoryFeedback.hpp  FollowJointTrajectoryGoal.hpp  FollowJointTrajectoryResult.hpp  ImageMessage.hpp  JointTrajectoryPoint.hpp
cpp/lcmware/types/grip/: GripCommand.hpp  GripFeedback.hpp  GripResult.hpp
java/core/: ActionCancel.java  Bool.java  BoolArray.java  BoolArrayMsg.java  BoolServiceRequest.java  BoolServiceResponse.java  ByteArray.java  ByteArrayMsg.java  ByteArrayRequest.java  ByteArrayServiceRequest.java  ByteArrayServiceResponse.java  Command.java  CommandMsg.java  CommandResponse.java  Double.java  DoubleArray.java  DoubleArrayMsg.java  DoubleMsg.java  DoubleRequest.java  DoubleServiceRequest.java  DoubleServiceResponse.java  Empty.java  EmptyActionGoal.java  EmptyActionResult.java  EmptyResponse.java  EmptyServiceRequest.java  EmptyServiceResponse.java  FileResponse.java  Header.java  Heartbeat.java  HeartbeatRequest.java  HeartbeatResponse.java  IntArray.java  KeyValue.java  KeyValueArray.java  ProcessDataResult.java  ServiceResponseHeader.java  String.java  StringArray.java  StringRequest.java  (+14 more)
java/examples/: AddNumbersRequest.java  AddNumbersResponse.java  FollowJointTrajectoryFeedback.java  FollowJointTrajectoryResult.java
java/grip/: GripFeedback.java  GripResult.java
java/lcmware/types/: build_types.sh
java/lcmware/types/core/: ActionStatus.java  BoolMsg.java  BoolRequest.java  BoolResponse.java  ByteArrayResponse.java  DoubleResponse.java  EmptyActionFeedback.java  EmptyMsg.java  EmptyRequest.java  FileRequest.java  FileResponse.java  IntArrayMsg.java  KeyValueArrayMsg.java  KeyValueMsg.java  ProcessDataFeedback.java  ProcessDataGoal.java  ResponseHeader.java  StringArrayMsg.java  StringMsg.java  StringResponse.java  TimedActionFeedback.java  UInt32Response.java  UInt64Msg.java  UInt64Request.java  UInt64Response.java
java/lcmware/types/examples/: FollowJointTrajectoryGoal.java  ImageMessage.java  JointTrajectoryPoint.java
java/lcmware/types/grip/: GripCommand.java
lcm_types/: core.lcm  examples.lcm  generate_types.sh  grip.lcm
python/: LCM_TEST.py  robotiq_gripper_LCM.py  setup.py
python/examples/: action_demo.py  service_demo.py  topic_demo.py
python/lcmware/: __init__.py  action.py  constants.py  manager.py  service.py  topic.py
python/lcmware/types/: __init__.py
python/lcmware/types/core/: ActionCancel.py  ActionStatus.py  Bool.py  BoolArray.py  BoolArrayMsg.py  BoolMsg.py  BoolRequest.py  BoolResponse.py  BoolServiceRequest.py  BoolServiceResponse.py  ByteArray.py  ByteArrayMsg.py  ByteArrayRequest.py  ByteArrayResponse.py  ByteArrayServiceRequest.py  ByteArrayServiceResponse.py  Command.py  CommandMsg.py  CommandResponse.py  Double.py  DoubleArray.py  DoubleArrayMsg.py  DoubleMsg.py  DoubleRequest.py  DoubleResponse.py  DoubleServiceRequest.py  DoubleServiceResponse.py  Empty.py  EmptyActionFeedback.py  EmptyActionGoal.py  EmptyActionResult.py  EmptyMsg.py  EmptyRequest.py  EmptyResponse.py  EmptyServiceRequest.py  EmptyServiceResponse.py  FileRequest.py  FileResponse.py  Header.py  Heartbeat.py  (+39 more)
python/lcmware/types/examples/: AddNumbersRequest.py  AddNumbersResponse.py  FollowJointTrajectoryFeedback.py  FollowJointTrajectoryGoal.py  FollowJointTrajectoryResult.py  ImageMessage.py  JointTrajectoryPoint.py  __init__.py
python/lcmware/types/grip/: GripCommand.py  GripFeedback.py  GripResult.py  __init__.py
templates/cpp/: CMakeLists.txt  main.cpp
templates/python/msg/: custom_types.lcm
